[MODINVOSTO-138] - Logging improvement (#148)
* [MODINVOSTO-138] - Logging improvement

* [MODINVOSTO-138] - Logging improvement fixed nullpointer

* [MODINVOSTO-138] - Logging improvement fixed nullpointer

* [MODINVOSTO-138] - Logging improvement fixed duplication

* [MODINVOSTO-138] - Logging improvement fixed code smell

* [MODINVOSTO-138] - Logging improvement

* [MODINVOSTO-138] - Logging improvement

* [MODINVOSTO-138] - Logging improvement

* [MODINVOSTO-138] - Logging improvement added unit test

* [MODINVOSTO-138] - Logging improvement added unit test

* [MODINVOSTO-138] - Logging improvement added unit test

* [MODINVOSTO-138] - Logging improvement

* [MODINVOSTO-138] - Logging improvement changed event to ar

* [MODINVOSTO-138] - Logging improvement